# bucle

./: .bucle.toml  .gitignore  AGENTS.md  Justfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bucle.yml  config.yml
src/bucle/: __init__.py  cli.py  helpers.py  sync.py
src/bucle/commands/: check.py  init.py  render.py  reset.py  run.py  sync.py  tasks.py  tui.py
src/bucle/templates/: log.html.jinja2  main_report.html.jinja2
tests/: test_cli.py
tests/support/: fake_agent.py
